# NumSimSolver

./: .gitignore  LICENSE.md  README.md
src/: CMakeLists.txt
src/NumSimCore/: CMakeLists.txt  NumSimComm.cpp  NumSimComm.h  NumSimFramework.cpp  NumSimFramework.h  NumSimObject.cpp  NumSimObject.h  NumSimSimulation.cpp  NumSimSimulation.h
src/NumSimCore/NumSimCore/: NumSimObject.h
src/NumSimGui/: README.md  __init__.py  main.py  main_window.py  requirements.txt  resize_logo.py
src/NumSimSolver/: CMakeLists.txt  main.cpp
